# chroma-ai-dev

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EVALS.md  MCP_SERVERS.md  PROMPTS.md  PROVIDERS.md  README.md  TOOLS.md  build.rs
.chroma/issues/: chr-3687b80f.md  chr-89832442.md  chr-c5e72abe.md
.githooks/: commit-msg  install.sh  pre-commit
.github/workflows/: ci.yml  schema-validation.yml
docs/: schema-authoring-guide.md
docs/migration-guides/: TEMPLATE.md  prompt-legacy-assistant-1.0.0.md
docs/plans/: 2026-02-23-advanced-agent-platform-design.md  2026-02-23-advanced-agent-platform-implementation-plan.md  2026-02-23-ai-development-files-design.md  2026-02-23-implementation-plan.md  2026-02-24-issue-tracking-ticket-system-design.md
docs/schemas/: agent-config-schema.json  claude-config-schema.json  eval-schema.json  mcp-server-schema.json  prompt-schema.json  tool-schema.json
docs/templates/: schema-migration-guide.md
src/: agent_mail.rs  config.rs  control_plane.rs  docs_generation.rs  evals.rs  lib.rs  lsp_manager.rs  main.rs  memory_profiler.rs  modes.rs  orchestrator.rs  prompts.rs  schema_lint.rs  server.rs  terminal_safety.rs  tools.rs  tui.rs  versioning.rs
src/tickets/: id.rs  mod.rs  store.rs  types.rs
tests/: agent_mail.rs  cli_validate.rs  contract_tests.rs  control_plane.rs  docs_generation.rs  eval_runner.rs  integration.rs  lsp_manager.rs  modes.rs  orchestrator.rs  prompt_rendering.rs  rag_eval.rs  roundtrip.rs  schema_lint.rs  schema_validation.rs  server.rs  terminal_escape.rs  tool_execution.rs  versioning.rs  workflow_yaml.rs
tests/security/: terminal_escape.rs
tests/tools/: contract_tests.rs
